# iptv-thunder-tauri

./: .env.example  .gitignore  ANDROID_TV_SETUP.md  LICENSE  MODULAR_ARCHITECTURE.md  README.md  index.html  jest.config.ts  mpv-config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  response.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-macos.yml
scripts/: generate-android-icons.js
src/: App.css  App.tsx  main.tsx  test-globals.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/lib/: libmpv-wrapper.dylib
src-tauri/src/: lib.rs  lib.rs.backup.20260327_121905  main.rs
src/__tests__/: setup.ts
src/components/: AccountForm.tsx  AccountGrid.tsx  AppContent.tsx  AppLayout.tsx  ChannelList-backup.tsx.bak  ChannelList.tsx  ErrorBoundary.tsx  ImportExportModal.tsx  Navbar.tsx  Player.tsx  SettingsModal.tsx  VideoPlayer.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/__tests__/: theme-provider.test.tsx
src/components/ui/: CategoryCard.tsx  HeroBanner.tsx  HorizontalCarousel.tsx  MediaCard.tsx  Navigation.tsx  NetflixMediaCard.tsx  TVSelect.tsx  TitleBar.tsx  Toast.tsx  card.tsx  dropdown-menu.tsx  select.tsx  switch.tsx
src/features/epg/: EPGTimeline.tsx  epg.api.ts  epg.hooks.ts
src/features/movies/: ContinueWatching.tsx  FavoriteMovieCategoriesList.tsx  FavoriteMoviesList.tsx  MovieCategoriesList.tsx  MovieDetails.tsx  MovieList.tsx  MovieList.tsx.bak  movies.api.ts  movies.hooks.ts  movies.hooks.ts.bak
src/features/personalized/: ForYouSection.tsx
src/features/player/: Player.tsx  Player.tsx.backup.20260327_121855  player.hooks.ts  (+1 more)
src/hooks/: db.ts  index.ts  tvLongPressState.ts  useAppRouter.ts  useCarousel.ts  useCategories.ts  useDatabase.ts  useFavorites.ts  useImageCache.ts  useLongPress.ts  useNavigationMenu.ts  usePlaybackManager.ts  useRecentItems.ts  useSecureStorage.ts  useSettings.ts  useTVContainers.ts  useTVFocusGraph.ts  useTVKeyboard.ts  useTVNavigation.ts  useTranslation.ts  useTypedRouter.ts  useWindowControls.ts
src/lib/: db.ts  embeddedMpvPlayer.ts  exoPlayer.ts  importExport.ts  logger.ts  mpvPlayer.ts  schema.ts  services.ts  stalkerAPI_new.ts  tauriHttp.ts  tauriStorage.ts  translations.ts
src/store/: accountStore.ts  app.store.ts  playback.store.ts  portalCache.store.ts  portals.store.ts  resume.store.ts  stream.store.ts  usePortalStore.ts
src/types/: index.ts
(+138 files in other folders)
