[package]
name = "iptv-thunder"
version = "0.1.0"
description = "IPTV Stalker Portal (Tauri)"
authors = ["rafalsza"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iptv_thunder_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-http = "2.5.9"
tauri-plugin-store = "2.4.3"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
reqwest = { version = "0.13.3", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0"

# Desktop-only plugins (not available on Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-libmpv = "0.3.2"

